Replace all usages of: new Integer(v).intValue() with Integer.parseInt(v) new Integer(v) with Integer.valueOf(v) new Boolean(v).booleanValue() with Boolean.parseBoolean(v) new Boolean(v) with Boolean.valueOf(v) new Float(v).floatValue() with Float.parseFloat(v) new Double(v).doubleValue() with Double.parseDouble(v)
svn path=/trunk/javanlp/; revision=21657