@@ -799,7 +799,7 @@ public class ATableHMM2EQ extends ATable {
     try {
       InFile in = new InFile(filename);
       //MAX_LENGTH
-      MAX_LENGTH = (new Integer(in.readLine())).intValue();
+      MAX_LENGTH = (Integer.valueOf(in.readLine())).intValue();
       params = new float[2 * MAX_LENGTH + 1][2 * MAX_FLDS];
       counts = new float[2 * MAX_LENGTH + 1][2 * MAX_FLDS];
       initialCounts = new float[MAX_LENGTH + 2]; // from 1 to MAX_LENGTH+1 filed 0 is not used
@@ -820,7 +820,7 @@ public class ATableHMM2EQ extends ATable {
           token = st.nextToken();
           token = st.nextToken();//skip the jump size and the previous size
           token = st.nextToken();
-          counts[current++][current_jump_prev] = (float) (new Double(token)).doubleValue();
+          counts[current++][current_jump_prev] = (float) Double.parseDouble(token);
 
         }
       }
@@ -831,7 +831,7 @@ public class ATableHMM2EQ extends ATable {
       while (st.hasMoreTokens()) {
         token = st.nextToken();//skip the jump size
         token = st.nextToken();
-        initialCounts[current++] = (float) (new Double(token)).doubleValue();
+        initialCounts[current++] = (float) Double.parseDouble(token);
 
       }
 
@@ -862,7 +862,7 @@ public class ATableHMM2EQ extends ATable {
     try {
       InFile in = new InFile(filename);
       //MAX_LENGTH
-      MAX_LENGTH = (new Integer(in.readLine())).intValue();
+      MAX_LENGTH = (Integer.valueOf(in.readLine())).intValue();
       params = new float[2 * MAX_LENGTH + 1][2 * MAX_FLDS];
       counts = new float[2 * MAX_LENGTH + 1][2 * MAX_FLDS];
       initialCounts = new float[MAX_LENGTH + 2]; // from 1 to MAX_LENGTH filed 0 is not used
@@ -875,7 +875,7 @@ public class ATableHMM2EQ extends ATable {
       token = st.nextToken();
       token = st.nextToken();
 
-      counts[0][0] = (float) (new Double(token)).doubleValue();
+      counts[0][0] = (float) Double.parseDouble(token);
       for (int jmp = 0; jmp < 2 * MAX_FLDS; jmp++) {
         counts[0][jmp] = counts[0][0];
       }
@@ -888,7 +888,7 @@ public class ATableHMM2EQ extends ATable {
       while (st.hasMoreTokens()) {
         token = st.nextToken();//skip the jump size
         token = st.nextToken();
-        counts[current++][0] = (float) (new Double(token)).doubleValue();
+        counts[current++][0] = (float) Double.parseDouble(token);
 
       }
 
@@ -905,7 +905,7 @@ public class ATableHMM2EQ extends ATable {
       while (st.hasMoreTokens()) {
         token = st.nextToken();//skip the jump size
         token = st.nextToken();
-        initialCounts[current++] = (float) (new Double(token)).doubleValue();
+        initialCounts[current++] = (float) Double.parseDouble(token);
 
       }
 
